--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/jdmar3-comp426/a02-zizhou1518#readme",
   "dependencies": {
-    "browser-sync": "^2.27.5"
+    "browser-sync": "^2.27.5",
+    "bulma": "^0.9.3"
   }
 }
