added more changes to classes

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "url": "git+https://github.com/jdmar3-comp426/a02-zizhou1518.git"
   },
   "author": "Zizhou Lu",
-  "license": "GPL-3.0",
+  "license": "GPL-3.0-or-later",
   "bugs": {
     "url": "https://github.com/jdmar3-comp426/a02-zizhou1518/issues"
   },
